app/components/AngledRectangle/AngledRectangle.module.css
.angled_rectangle {
	position: relative;
	width: 100%;
	display: flex;
	/* align-items: center; */
	justify-content: center;
	/* overflow: hidden; */
	margin: -5rem 0;
	padding: 5rem 0;
	z-index: 1;
}

.angled_rectangle h1 {
	font-size: 6vw;
	font-weight: 900;
	/* text-align: left; */
	/* margin-bottom: 5rem; */
	text-transform: uppercase;
	line-height: 1;
	padding-bottom: 3rem;
	text-align: left;
}

.angled_rectangle.right {
	clip-path: polygon(0 0, 100% 4.9rem, 100% calc(100% - 4.9rem), 0 100%);
}

.angled_rectangle.left {
	clip-path: polygon(0 5.1rem, 100% 0%, 100% 100%, 0 calc(100% - 4.9rem));
}

.angled_rectangle.yellow {
	background: var(--yellow);
}

.angled_rectangle.white {
	background: var(--white);
}

.angled_rectangle.blue {
	background: var(--blue);
}

.angled_rectangle.text_yellow {
	color: var(--yellow);
}

.angled_rectangle.text_white {
	color: var(--white);
}

.angled_rectangle.text_blue {
	color: var(--blue);
}

.angled_content {
	text-align: left;
	/* max-width: 70%; */
	/* z-index: 1; */
	/* position: relative; */
	padding: 10rem 5%;
	display: flex;
	flex-direction: column;
	align-items: center;
	/* justify-content: center; */
	/* gap: 5rem; */
	width: 100%;
}

